[package]
name = "sandproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
dashmap = "6.1.0"
fast-socks5 = "1.0.0-rc.0"
rand = "0.9.1"
rand_chacha = "0.9.0"
russh = "0.53.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
